--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.46.1",
+    "@blocknote/mantine": "^0.46.1",
+    "@blocknote/react": "^0.46.1",
     "@blocksuite/blocks": "^0.0.0-canary-20250316001624",
     "@blocksuite/presets": "^0.0.0-canary-20250316001624",
     "@blocksuite/store": "^0.0.0-canary-20250316001624",
+    "@mantine/core": "^8.3.12",
+    "@mantine/hooks": "^8.3.12",
+    "@mantine/utils": "^6.0.22",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
