--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@mantine/utils": "^6.0.22",
     "next": "16.1.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "youtubei.js": "^16.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
